kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: mern
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8080
      targetPort: http
